# demo-package-with-pyproject.toml

./: README.md  commands.txt  pyproject.toml
